--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ body {
   border-right: 0.313rem solid transparent;
   border-top: 0.25rem solid black;
   transition: 0.3s;
-  margin-left: 0.313rem;
+  margin: 0 0 0 0.313rem;
 }
 .header-container .header-wrapper .header-list .dropdown .caret-rotate {
   transform: rotate(180deg);
@@ -92,7 +92,7 @@ body {
   list-style-type: none;
   padding: 0.5rem;
   background: white;
-  box-shadow: 0px 1rem 2rem 0 rgba(82, 88, 117, 0.08);
+  box-shadow: 0 1rem 2rem 0 rgba(82, 88, 117, 0.08);
   border-radius: 0.3rem;
   color: rgb(15, 19, 26);
   position: absolute;
@@ -139,17 +139,17 @@ body {
 }
 .main-container .main-cards .main-cards-div1 img {
   width: 100%;
-  border-radius: 12px;
+  border-radius: 0.75rem;
 }
 .main-container .main-cards .main-cards-div2 {
   width: 50%;
 }
 .main-container .main-cards .main-cards-div2 img {
   width: 100%;
-  border-radius: 12px;
+  border-radius: 0.75rem;
 }
 .main-container .main-splide-content {
-  margin-bottom: 96px;
+  margin: 0 0 6rem 0;
 }
 
 /*Footer*/
@@ -177,7 +177,7 @@ body {
 .footer-container .footer-content .footer-first-part {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 1.875rem;
 }
 .footer-container .footer-content .footer-first-part .first-part-text {
   display: flex;
@@ -227,20 +227,20 @@ body {
 .footer-container .footer-content .footer-form {
   display: flex;
   flex-direction: column;
-  width: 568px;
-  max-width: 600px;
+  width: 35.5rem;
+  max-width: 37.5rem;
   position: relative;
-  padding: 32px 0 32px 32px;
-  gap: 32px;
+  padding: 2rem 0 2rem 2rem;
+  gap: 2rem;
 }
 .footer-container .footer-content .footer-form .row {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 20px;
+  gap: 1.25rem;
 }
 .footer-container .footer-content .footer-form .row #name {
-  height: 42px;
+  height: 2.625rem;
 }
 .footer-container .footer-content .footer-form .row .group-name {
   width: 50%;
@@ -251,7 +251,7 @@ body {
 }
 .footer-container .footer-content .footer-form .input-group input, .footer-container .footer-content .footer-form .input-group textarea {
   width: 100%;
-  padding: 10px;
+  padding: 0.625rem;
   background-color: rgb(55, 65, 81);
   font-size: 15px;
   border: none;
@@ -271,13 +271,13 @@ body {
   font-weight: 400;
 }
 .footer-container .footer-content .footer-form .input-group #email {
-  height: 42px;
+  height: 2.625rem;
 }
 .footer-container .footer-content .footer-form .input-group label {
   height: 100%;
   position: absolute;
   left: 0;
-  bottom: 25px;
+  bottom: 1.563rem;
   color: rgb(255, 255, 255);
   font-size: 0.875rem;
   line-height: 1.375rem;
@@ -292,7 +292,7 @@ body {
   background-color: rgb(249, 115, 22);
   border: none;
   border-radius: 0.25rem;
-  padding: 1rem 2rem 1rem 2rem;
+  padding: 1rem 2rem;
   width: 100%;
   cursor: pointer;
 }
@@ -300,7 +300,7 @@ body {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding: 24px;
+  padding: 1.5rem;
 }
 .footer-container .footer-second-part .footer-item-contact {
   display: flex;
@@ -311,7 +311,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
-  width: 457px;
+  width: 28.563rem;
 }
 .footer-container .footer-second-part .footer-contact-list p {
   color: rgb(156, 163, 175);
@@ -367,7 +367,7 @@ body {
 }
 .footer-container .footer-last-part {
   width: 100%;
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  border-top: 0.063rem solid rgba(255, 255, 255, 0.1);
 }
 .footer-container .footer-last-part .footer-last-info {
   display: flex;
@@ -391,7 +391,7 @@ body {
   color: rgb(107, 114, 128);
 }
 .footer-container .footer-last-part .footer-last-info .footer-last-frame a {
-  height: 14px;
+  height: 0.875rem;
   margin: 0.125rem 0 0 0.25rem;
 }
 
@@ -399,23 +399,23 @@ body {
   display: flex;
   align-items: center;
   background-color: rgb(234, 237, 241);
-  height: 528px;
+  height: 33rem;
 }
 .elektro-bg .main-information {
   max-width: 90rem;
   margin: 0 auto;
   display: flex;
   align-items: center;
-  gap: 64px;
+  gap: 4rem;
 }
 .elektro-bg .main-information .elektro-features {
-  max-width: 555px;
+  max-width: 34.688rem;
 }
 .elektro-bg .main-information .elektro-features .elektro-items {
   display: flex;
   align-items: center;
-  margin-bottom: 24px;
-  gap: 4px;
+  margin: 0 0 1.5rem 0;
+  gap: 0.25rem;
   color: rgb(107, 114, 128);
 }
 .elektro-bg .main-information .elektro-features .elektro-items p {
@@ -427,7 +427,7 @@ body {
   line-height: 3.5rem;
   color: rgb(15, 19, 26);
   font-weight: 600;
-  margin-bottom: 24px;
+  margin: 0 0 1.5rem 0;
 }
 .elektro-bg .main-information .elektro-features p {
   font-size: 1.125rem;
@@ -435,7 +435,7 @@ body {
   font-weight: 400;
 }
 .elektro-bg .main-information img {
-  border-radius: 12px;
+  border-radius: 0.75rem;
 }
 
 .main-splide-content {
@@ -446,14 +446,14 @@ body {
 .section-cards {
   display: flex;
   align-items: center;
-  height: 568px;
+  height: 35.5rem;
 }
 .section-cards .elektro-cards {
   display: flex;
   flex-direction: column;
   max-width: 90rem;
   margin: 0 auto;
-  gap: 40px;
+  gap: 2.5rem;
 }
 .section-cards .elektro-cards h2 {
   font-size: 2.5rem;
@@ -464,16 +464,16 @@ body {
 .section-cards .elektro-cards .elektro-item {
   display: flex;
   flex-wrap: wrap;
-  gap: 16px;
+  gap: 1rem;
 }
 .section-cards .elektro-cards .elektro-item .elektro-card {
   display: flex;
-  flex-basis: calc(33.33% - 20px);
-  padding: 16px 20px;
+  flex-basis: calc(33.33% - 1.25rem);
+  padding: 1rem 1.25rem;
   align-items: center;
-  border-radius: 8px;
-  border: 1px solid rgb(209, 213, 219);
-  gap: 16px;
+  border-radius: 0.5rem;
+  border: 0.063rem solid rgb(209, 213, 219);
+  gap: 1rem;
 }
 .section-cards .elektro-cards .elektro-item .elektro-card h5 {
   font-size: 1.25rem;
@@ -482,19 +482,19 @@ body {
 }
 
 .section-services {
-  height: 1152px;
+  height: 72rem;
 }
 .section-services .services-features {
   display: flex;
   flex-direction: column;
   max-width: 90rem;
   margin: 0 auto;
-  gap: 64px;
+  gap: 4rem;
 }
 .section-services .services-features .services-items {
   display: flex;
   align-items: center;
-  gap: 48px;
+  gap: 3rem;
 }
 .section-services .services-features .services-items .services-text {
   width: 50%;
@@ -502,7 +502,7 @@ body {
 .section-services .services-features .services-items .services-text h2 {
   font-size: 2.5rem;
   line-height: 3rem;
-  margin-bottom: 16px;
+  margin: 0 0 1rem 0;
 }
 .section-services .services-features .services-items .services-text p {
   font-size: 1.125rem;
@@ -514,10 +514,10 @@ body {
   font-weight: 600;
 }
 .section-services .services-features .services-items .services-part {
-  padding: 0 56px 0 0;
+  padding: 0 3.5rem 0 0;
 }
 .section-services .services-features .services-items .services-part-second {
-  padding: 0 0 0 56px;
+  padding: 0 0 0 3.5rem;
 }
 .section-services .services-features .services-items .services-img {
   width: 50%;
@@ -529,7 +529,7 @@ body {
 .section-items {
   display: flex;
   align-items: center;
-  height: 488px;
+  height: 30.5rem;
 }
 .section-items .content-items-info {
   display: flex;
@@ -540,32 +540,32 @@ body {
 .section-items h2 {
   font-size: 2.5rem;
   line-height: 3rem;
-  margin-bottom: 40px;
+  margin: 0 0 2.5rem 0;
 }
 .section-items .items-features {
   display: flex;
-  gap: 64px;
+  gap: 4rem;
 }
 .section-items .items-features .items-content {
   display: flex;
   flex-direction: column;
-  border-radius: 12px;
-  padding: 24px 24px 32px 24px;
+  border-radius: 0.75rem;
+  padding: 1.5rem 1.5rem 2rem 1.5rem;
   width: 100%;
-  gap: 24px;
+  gap: 1.5rem;
   background-color: rgb(32, 41, 55);
 }
 .section-items .items-features .items-content .items-icon {
-  padding: 12px;
-  border: 1px solid rgb(55, 65, 81);
-  width: 48px;
-  height: 48px;
-  border-radius: 4px;
+  padding: 0.75rem;
+  border: 0.063rem solid rgb(55, 65, 81);
+  width: 3rem;
+  height: 3rem;
+  border-radius: 0.25rem;
 }
 .section-items .items-features .items-content h5 {
   font-size: 1.25rem;
   line-height: 1.5rem;
-  margin-bottom: 8px;
+  margin: 0 0 0.5rem 0;
   font-weight: 600;
   color: rgb(255, 255, 255);
 }
@@ -579,5 +579,35 @@ body {
   background-color: rgb(56, 65, 80);
 }
 .section-items .items-features .light-color .light-color-icon {
-  border: 1px solid rgba(209, 213, 219, 0.2);
+  border: 0.063rem solid rgba(209, 213, 219, 0.2);
+}
+
+.section-example {
+  height: 47.375rem;
+}
+.section-example .container-example {
+  display: flex;
+  flex-direction: column;
+  max-width: 90rem;
+  margin: 0 auto;
+}
+.section-example .container-example .info-example {
+  max-width: 53.313rem;
+}
+.section-example .container-example .info-example h2 {
+  font-size: 2.5rem;
+  line-height: 3rem;
+  color: rgb(15, 19, 26);
+  font-weight: 600;
+  margin: 0 0 1rem 0;
+}
+.section-example .container-example .info-example p {
+  font-size: 1.125rem;
+  line-height: 1.625rem;
+  font-weight: 400;
+  color: rgb(56, 65, 80);
+}
+
+.splide2 img {
+  width: 100%;
 }/*# sourceMappingURL=style.css.map */
