--- a/style.css
+++ b/style.css
@@ -710,10 +710,6 @@ body {
   justify-content: flex-end; /* Zarovná slidy na pravou stranu */
 }
 
-#splide03-track {
-  /*width: 50%; docasne*/
-}
-
 .slider3 img {
   height: 280px;
   width: 100%;
@@ -724,4 +720,47 @@ body {
 .slide-caption {
   background-color: green;
   padding: 20px;
+}
+
+.services-items-logistika {
+  width: 50%;
+}
+.services-items-logistika ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 2.5rem 0 0 0;
+}
+.services-items-logistika ul .services-logistika-list {
+  display: flex;
+  gap: 0.75rem;
+}
+.services-items-logistika ul li {
+  list-style-type: none;
+}
+.services-items-logistika ul li p {
+  color: rgb(56, 65, 80);
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 400;
+}
+
+.services-logistika-feature {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.services-logistika-item {
+  margin: 0 0 0 1.875rem;
+}
+
+.services-logistika-container {
+  display: flex;
+  align-items: center;
+  background-color: rgb(234, 237, 241);
+  padding: 0.75rem 1rem;
+  border-radius: 0.25rem;
+  margin: 1.5rem 0 0 0;
+  gap: 0.75rem;
 }/*# sourceMappingURL=style.css.map */
